src/test/compile-fail/bad-name.rs

// error-pattern: malformed name

fn main() {
  let x.y[int].z foo;
}
